# MiniAIC

./: .gitignore  CMakeLists.txt  README.md
docs/: README.md
miniaic/: CMakeLists.txt  main.cc
miniaic/frontend/: CMakeLists.txt
miniaic/ir/: CMakeLists.txt  graph.cc  graph.h  node.cc  node.h  tensor.cc
miniaic/onnx/: CMakeLists.txt  onnx.pb.h
proto/: README.md
proto/onnx/: onnx.pb.cc
python/: gen_onnx.py
